# restmail

./: Cargo.toml  README.md
migrations/: 20230611183523_users.up.sql  20230611183845_emails.down.sql  20230611183845_emails.up.sql
src/: main.rs
src/models/: email.rs  user.rs
