[package]
name = "minimail"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Lorenzo Carbonell <lorenzo.carbonell.cerezo@gmail.com>"]
rust-version = "1.69"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Core dependencies: runtime, HTTP framework and database client.
tokio = { version = "1.27", features = ["full", "time"] }
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "sqlite", "macros", "offline", "chrono"] }
axum = { version = "0.6" , features = ["multipart"] }
axum-extra = { version = "0.7", features = ["cookie"] }

# Axum builds on the types in Tower
# tower = "0.4"
tower-http = { version = "0.4", features = [ "trace", "fs", "cors" ] }

# jwt
jsonwebtoken = "8.3"

# Templates
minijinja = "0.34"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utility
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
time = "0.3"
